--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.civtechstl</groupId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<parent>
@@ -156,7 +156,7 @@
 		</pluginRepository>
 	</pluginRepositories>
 
-	<artifactId>web-services</artifactId>
+	<artifactId>stlcourts-api</artifactId>
 	<name>Web-Services</name>
 	<description>Spring Boot Web Services for yourstlcourts.com</description>
 </project>
