--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
     		<artifactId>mysql-connector-java</artifactId>
     		<version>5.1.35</version>
 		</dependency>
+		<dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-all</artifactId>
+          <version>1.9.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
