--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,11 @@ server:
 ---
 spring:
   profiles.active: local
+  applicationURL: localhost:9000
 ---
 spring:
   profiles: qa
+  applicationURL: http://test.yourstlcourts.com
 spring.datasource:
   driverClassName: com.mysql.jdbc.Driver
   url: jdbc:mysql:${MYSQL_URL}?useUnicode=true&amp;characterEncoding=UTF-8
@@ -18,6 +20,7 @@ spring.datasource:
 ---
 spring:
   profiles: prod
+  applicationURL: http://www.yourstlcourts.com
 spring.datasource:
   driverClassName: com.mysql.jdbc.Driver
   url: jdbc:mysql:${MYSQL_URL}?useUnicode=true&amp;characterEncoding=UTF-8
