added http:// to localhost

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 ---
 spring:
   profiles: local
-  clientURL: localhost:9000
+  clientURL: http://localhost:9000
 ---
 spring:
   profiles: qa
