--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,12 @@ spring:
   profiles.active: local
 ---
 spring:
+  profiles: local
+  clientURL: http://localhost:9000
+---
+spring:
   profiles: qa
+  clientURL: http://test.yourstlcourts.com
 spring.datasource:
   driverClassName: com.mysql.jdbc.Driver
   url: jdbc:mysql:${MYSQL_URL}?useUnicode=true&amp;characterEncoding=UTF-8
@@ -18,6 +23,7 @@ spring.datasource:
 ---
 spring:
   profiles: prod
+  clientURL: http://www.yourstlcourts.com
 spring.datasource:
   driverClassName: com.mysql.jdbc.Driver
   url: jdbc:mysql:${MYSQL_URL}?useUnicode=true&amp;characterEncoding=UTF-8
