Switch to non sequential public ids (#16)
* added profile variables for Hashids salt

* Added automatic use of gson when converting to Json and hashing of public ID fields (Court, Judge, Municipality)

* Updated CourtController with updates from new municipality format

* Re-wrote, to create a custom HashableEntity Type, and do custom serialization on field paramaters vs the whole class

* Removed String Long to long Hash encoding

* added missing courtID hash for municipalities, simplified map function in DAO to use Long vs HashedEntity

* made member variables private on HashableEntity

* Changed getTypeName() to getSimpleName()

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port: 8080
   contextPath: /api
+
 ---
 spring:
   profiles.active: local
@@ -8,6 +9,11 @@ spring:
 spring:
   profiles: local
   clientURL: http://localhost:9000
+stlcourts:
+  security:
+    municipalitySalt: salt1
+    judgeSalt: salt2
+    courtSalt: salt3
 ---
 spring:
   profiles: qa
@@ -20,6 +26,11 @@ spring.datasource:
   testWhileIdle: true
   timeBetweenEvictionRunsMillis: 60000
   validationQuery: SELECT 1
+stlcourts:
+  security:
+    municipalitySalt: ${MUNICIPALITY_SALT}
+    judgeSalt: ${JUDGE_SALT}
+    courtSalt: ${COURT_SALT}
 ---
 spring:
   profiles: prod
@@ -32,3 +43,8 @@ spring.datasource:
   testWhileIdle: true
   timeBetweenEvictionRunsMillis: 60000
   validationQuery: SELECT 1
+stlcourts:
+  security:
+    municipalitySalt: ${MUNICIPALITY_SALT}
+    judgeSalt: ${JUDGE_SALT}
+    courtSalt: ${COURT_SALT}
