--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<dependency>
+			<!-- https://mvnrepository.com/artifact/org.hashids/hashids -->
+		    <groupId>org.hashids</groupId>
+		    <artifactId>hashids</artifactId>
+		    <version>1.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
