--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+			<version>1.1.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
