--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,8 +39,8 @@ spring.datasource:
   validationQuery: SELECT 1
 stlcourts:
   citationDataSources:
-    testEnabled: true
-    liveEnabled: true
+    testEnabled: ${TEST_SOURCES_ENABLED}
+    liveEnabled: ${LIVE_SOURCES_ENABLED}
   clientURL: http://test.yourstlcourts.com
   security:
     municipalitySalt: ${MUNICIPALITY_SALT}
