Re architect citations multiple data sources (#22)
* Enabling actuator

* [Multiple Data Sources] Begin re-architecting citations to be retrieved by multiple datasources

* [Multiple Data Sources] Implement citation data source lookups by muni ids and support finding all data sources from factory

* [Multiple Data Sources] Make factory final (just needed to commit)

* [Re-Architect for Multiple Citation Data Sources] Created Mock Data Source; add Data Source Interface methods; added configuration for whether to use test/live sources

* Cleaning up controller to fix build

* Initial progress on TylerAPIConnector.

* [Re-Architect Data Sources] Introduce ReactiveX Observables to run queries in parallel across citation data sources

* [Re-Architect Data Sources] Fix issues with merge and get functioning parallel calls for citations

* [Re-Architect Data Sources] Add parallel logic for other citation dao methods and set test environment citation source flags from system properties

* [Re-Architect Data Sources] Fix tests and add new tests for new code, isolate sql into file

* [Re-Architect Data Sources] Remove misleading comment

* [Re-Architect Data Sources] Add mysql changelog for new tables

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,34 @@
 server:
   port: 8080
   contextPath: /api
-
+management:
+  context-path: /manage
+  port: -1
+stlcourts:
+  citationDataSources:
+    tyler:
+      rootUrl: http://TODOURL/api/citations
+      apiKey: TODOKEY
 ---
 spring:
   profiles.active: local
 ---
 spring:
   profiles: local
-  clientURL: http://localhost:9000
 stlcourts:
+  citationDataSources:
+    testEnabled: true
+    liveEnabled: true
+  clientURL: http://localhost:9000
   security:
     municipalitySalt: salt1
     judgeSalt: salt2
     courtSalt: salt3
+management:
+  port: 8080
 ---
 spring:
   profiles: qa
-  clientURL: http://test.yourstlcourts.com
 spring.datasource:
   driverClassName: com.mysql.jdbc.Driver
   url: jdbc:mysql:${MYSQL_URL}?useUnicode=true&amp;characterEncoding=UTF-8
@@ -27,6 +38,10 @@ spring.datasource:
   timeBetweenEvictionRunsMillis: 60000
   validationQuery: SELECT 1
 stlcourts:
+  citationDataSources:
+    testEnabled: ${TEST_SOURCES_ENABLED}
+    liveEnabled: ${LIVE_SOURCES_ENABLED}
+  clientURL: http://test.yourstlcourts.com
   security:
     municipalitySalt: ${MUNICIPALITY_SALT}
     judgeSalt: ${JUDGE_SALT}
@@ -34,7 +49,6 @@ stlcourts:
 ---
 spring:
   profiles: prod
-  clientURL: http://www.yourstlcourts.com
 spring.datasource:
   driverClassName: com.mysql.jdbc.Driver
   url: jdbc:mysql:${MYSQL_URL}?useUnicode=true&amp;characterEncoding=UTF-8
@@ -44,6 +58,10 @@ spring.datasource:
   timeBetweenEvictionRunsMillis: 60000
   validationQuery: SELECT 1
 stlcourts:
+  citationDataSources:
+    testEnabled: false
+    liveEnabled: true
+  clientURL: http://www.yourstlcourts.com
   security:
     municipalitySalt: ${MUNICIPALITY_SALT}
     judgeSalt: ${JUDGE_SALT}
