Finished porting to multi-citation-datasource code, updated yaml properties

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,49 +9,47 @@ stlcourts:
     tyler:
       rootUrl: http://TODOURL/api/citations
       apiKey: TODOKEY
+  twilio:
+    accountSid: ${TWILIO_SID}
+    authToken: ${TWILIO_AUTH_TOKEN}
+    phoneNumber: +13142548050
 ---
 spring:
   profiles.active: local
 ---
 spring:
   profiles: local
-twilio:
-  accountSid: ${TWILIO_SID}
-  authToken: ${TWILIO_AUTH_TOKEN}
-  phoneNumber: +13142548050
 stlcourts:
   citationDataSources:
     testEnabled: true
     liveEnabled: true
   clientURL: http://localhost:9000
+  demoMode: true
+  runHeadless: true
   security:
     municipalitySalt: salt1
     judgeSalt: salt2
     courtSalt: salt3
-    demoModeAllowed: true
 management:
   port: 8080
 ---
 spring:
   profiles: localWithHSQLAccess
   clientURL: http://localhost:9000
-twilio:
-  accountSid: ${TWILIO_SID}
-  authToken: ${TWILIO_AUTH_TOKEN}
-  phoneNumber: +13142548050
 stlcourts:
+  citationDataSources:
+    testEnabled: true
+    liveEnabled: false
+  clientURL: http://localhost:9000
+  demoMode: true
+  runHeadless: false
   security:
     municipalitySalt: salt1
     judgeSalt: salt2
     courtSalt: salt3
-    demoModeAllowed: true
 ---
 spring:
   profiles: qa
-twilio:
-  accountSid: ${TWILIO_SID}
-  authToken: ${TWILIO_AUTH_TOKEN}
-  phoneNumber: +13142548050
 spring.datasource:
   driverClassName: com.mysql.jdbc.Driver
   url: jdbc:mysql:${MYSQL_URL}?useUnicode=true&amp;characterEncoding=UTF-8
@@ -65,18 +63,15 @@ stlcourts:
     testEnabled: ${TEST_SOURCES_ENABLED}
     liveEnabled: ${LIVE_SOURCES_ENABLED}
   clientURL: http://test.yourstlcourts.com
+  demoMode: false
+  runHeadless: true
   security:
     municipalitySalt: ${MUNICIPALITY_SALT}
     judgeSalt: ${JUDGE_SALT}
     courtSalt: ${COURT_SALT}
-    demoModeAllowed: true
 ---
 spring:
   profiles: prod
-twilio:
-  accountSid: ${TWILIO_SID}
-  authToken: ${TWILIO_AUTH_TOKEN}
-  phoneNumber: +13142548050
 spring.datasource:
   driverClassName: com.mysql.jdbc.Driver
   url: jdbc:mysql:${MYSQL_URL}?useUnicode=true&amp;characterEncoding=UTF-8
@@ -90,8 +85,9 @@ stlcourts:
     testEnabled: false
     liveEnabled: true
   clientURL: http://www.yourstlcourts.com
+  demoMode: false
+  runHeadless: true
   security:
     municipalitySalt: ${MUNICIPALITY_SALT}
     judgeSalt: ${JUDGE_SALT}
     courtSalt: ${COURT_SALT}
-    demoModeAllowed: false
