--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,13 +12,17 @@ stlcourts:
 ---
 spring:
   profiles.active: local
+  cache:
+    cache-names: courtsById,courtsByMunicipalityId,allCourts
+    caffeine:
+      spec: expireAfterWrite=86400s
 ---
 spring:
   profiles: local
 stlcourts:
   citationDataSources:
     testEnabled: true
-    liveEnabled: true
+    liveEnabled: false
   clientURL: http://localhost:9000
   security:
     municipalitySalt: salt1
