Sms automated alerts (#21)
* test code for sending SMS alert message

* Adds SMS Alert structure and DAO Functions

* Added LocalDate and LocalDateTime Fields

* intermediate commit

* serialized LocalDate and LocalDateTime fields

* merged with latest Develop branch, modified unit tests to work with new LocalDate

* Removed old comment text that didn't apply to this release

* handled null date values

* Removed last vestiges of java.util.Date and switched to LocalDate.  Added Spring converter for LocalDate and LocalDateTime

* fixed Hashing for multiple municipalities

* cleaned up null checks from database

* Removed Citations DAO and citations now returns List<Citations>

* Created automated SMS Text Reminder system

* SQL Change log

* Finished porting to multi-citation-datasource code,
updated yaml properties

* moved insert/remove citations code to mockCitationDataSource
moved sql statements in SMSAlertDAO to external sql files

* moved insert/remove sql statements to separate files

* Updated sql for update-SMSAlert-courtDate sql

* added code to make demo SMSAlert only retreive the alert for the 1 demo request.

* updated paymentOptions client link

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ stlcourts:
     tyler:
       rootUrl: http://TODOURL/api/citations
       apiKey: TODOKEY
+  twilio:
+    accountSid: ${TWILIO_SID}
+    authToken: ${TWILIO_AUTH_TOKEN}
+    phoneNumber: +13142548050
 ---
 spring:
   profiles.active: local
@@ -20,12 +24,28 @@ stlcourts:
     testEnabled: true
     liveEnabled: true
   clientURL: http://localhost:9000
+  demoMode: true
+  runHeadless: true
   security:
     municipalitySalt: salt1
     judgeSalt: salt2
     courtSalt: salt3
 management:
   port: 8080
+---
+spring:
+  profiles: localWithHSQLAccess
+stlcourts:
+  citationDataSources:
+    testEnabled: true
+    liveEnabled: false
+  clientURL: http://localhost:9000
+  demoMode: true
+  runHeadless: false
+  security:
+    municipalitySalt: salt1
+    judgeSalt: salt2
+    courtSalt: salt3
 ---
 spring:
   profiles: qa
@@ -42,6 +62,8 @@ stlcourts:
     testEnabled: ${TEST_SOURCES_ENABLED}
     liveEnabled: ${LIVE_SOURCES_ENABLED}
   clientURL: http://test.yourstlcourts.com
+  demoMode: false
+  runHeadless: true
   security:
     municipalitySalt: ${MUNICIPALITY_SALT}
     judgeSalt: ${JUDGE_SALT}
@@ -62,6 +84,8 @@ stlcourts:
     testEnabled: false
     liveEnabled: true
   clientURL: http://www.yourstlcourts.com
+  demoMode: false
+  runHeadless: true
   security:
     municipalitySalt: ${MUNICIPALITY_SALT}
     judgeSalt: ${JUDGE_SALT}
