--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,10 @@
 		    <artifactId>hashids</artifactId>
 		    <version>1.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
