--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,7 +51,7 @@ spring:
   profiles: localWithHSQLAccess
 stlcourts:
   citationDataSources:
-    testEnabled: true
+    testEnabled: false
     liveEnabled: true
   clientURL: http://localhost:9000
   demoMode: true
