Updated yaml to enable both test and live datasources fixed unit test for MockCitationDatasource

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,7 +51,7 @@ spring:
   profiles: localWithHSQLAccess
 stlcourts:
   citationDataSources:
-    testEnabled: false
+    testEnabled: true
     liveEnabled: true
   clientURL: http://localhost:9000
   demoMode: true
