Feature/tyler integration (#28)
* Getting data. Need to finish the mappings and do a DRY refactor of the data source. I’m sure some of that could be constructed once and shared, etc.

* Updated yaml to have tyler api parameters

* Code working with client
Tyler citationDate and courtId fields added
Removed Court_Location, Court_Address from citations
Removed Status_Date from Violations

* Updated yaml to enable both test and live datasources
fixed unit test for MockCitationDatasource

* Cleanup based on PR review comments.
- DRY refactor of TylerCitationDataSource
- Moving things into sub-packages
- Added some logs in edge case handlers
- Tightening naming on the transformers and methods

* Starting unit tests for tyler API classes

* More unit tests & test related changes

* renamed datasource_Identifier to tyler_court_identifier
added @Component to non-autowired component

* When no results are found, return an empty array from the liveDataSource

* removed getViolationByViolationId
changed ViolationDAO to used namedParameterJDBCTemplate like CitationDAO

* Changed Tyler error message when no data found.
Removed useless, debug code from ValidationDAO

* Created placeholder test for ViolationDAOTest so unit tests don't fail.

* Unit tests for ViolationDAO, tylerCItationDataSource, and Tyler.Transformers

* Moved ViolationDAO file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,28 @@
 server:
   port: 8080
   contextPath: /api
+
 management:
   context-path: /manage
   port: -1
+
 stlcourts:
   citationDataSources:
     tyler:
-      rootUrl: http://TODOURL/api/citations
-      apiKey: TODOKEY
+      rootUrl: ${TYLER_ROOT_URL}
+      apiKey: ${TYLER_API_KEY}
   twilio:
     accountSid: ${TWILIO_SID}
     authToken: ${TWILIO_AUTH_TOKEN}
     phoneNumber: +13142548050
+
+logging:
+  level:
+    root: 'WARN'
+    org.springframework.http.client: 'OFF'
+    org.springframework.web.client: 'OFF'
+    sun.net.www.protocol.http: 'OFF'
+
 ---
 spring:
   profiles.active: local
