--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ stlcourts:
     tyler:
       rootUrl: ${TYLER_ROOT_URL}
       apiKey: ${TYLER_API_KEY}
+    rejis:
+      rootUrl: ${REJIS_ROOT_URL}
+      username: ${REJIS_USERNAME}
+      password: ${REJIS_PASSWORD}
 
 logging:
   level:
