--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,8 +15,8 @@ stlcourts:
       rootUrl: ${REJIS_ROOT_URL}
       username: ${REJIS_USERNAME}
       password: ${REJIS_PASSWORD}
-    imported:
-      rootUrl: ${IMPORTED_ROOT_URL}
+    importedITI:
+      rootUrl: ${IMPORTED_ITI_ROOT_URL}
 
 logging:
   level:
