--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,8 @@ stlcourts:
       rootUrl: ${REJIS_ROOT_URL}
       username: ${REJIS_USERNAME}
       password: ${REJIS_PASSWORD}
+    importedITI:
+      rootUrl: ${IMPORTED_ITI_ROOT_URL}
 
 logging:
   level:
